# ddccontrol

./: .gitignore  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS  Cargo.toml  ChangeLog  CheckList  Dockerfile  Makefile.am  NEWS  README.md  SECURITY.md  TODO  TODO.md  autogen.sh  configure.ac  rust-porting.txt
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: unsupported_monitor.yml
.github/ci/: Dockerfile
.github/workflows/: ci-image.yml  ci.yml  codeql.yml  conventional-pr-title.yml  debian-ports-image.yml  debian-ports.yml  pages.yml  release-please.yml  static.yml
contrib/gnome-shell-extension/: README.md  extension.js  metadata.json
crates/ddccontrol-caps/: Cargo.toml  README.md
crates/ddccontrol-db/: Cargo.toml  README.md
crates/ddccontrol-db/fixtures/compat-db/: options.xml
crates/ddccontrol-db/fixtures/compat-db/monitor/: compat-common.xml  compat-monitor.xml
crates/ddccontrol-db/src/: lib.rs
crates/ddccontrol-db/src/monitor_db/: compatibility_tests.rs
data/: 90-nvidia-i2c.conf  Makefile.am
ddccontrol/: .cvsignore  AUTHORS  ChangeLog  CheckList  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  commit.sh  config.guess  config.sub  configure  configure.ac  libtool
ddccontrol-db/: .cvsignore  AUTHORS  ChangeLog  CheckList  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  commit.sh  config.guess  configure  configure.ac  xml2h.pl
ddccontrol-db/autom4te.cache/: output.1  requests  traces.0  traces.1
ddccontrol-db/db/: .cvsignore  Makefile.am  Makefile.in  options.xml  options.xml.h  options.xml.in
ddccontrol-db/db/monitor/: ACR2416.xml  ACRAD63.xml  AOCA928.xml  BNQ76CD.xml  CPQ1337.xml  DEL4005.xml  DEL400C.xml  DEL400D.xml  DEL4015.xml  DEL4016.xml  DEL5000.xml  DEL50AB.xml  DELA010.xml  DELA017.xml  DELA020.xml  DELA021.xml  DELD014.xml  DELE008.xml  DELE009.xml  ENC1887.xml  FUS0550.xml  FUS0552.xml  FUS0554.xml  FUS0555.xml  FUSlcd.xml  GSM4AEF.xml  GSM4B3E.xml  GSM4E3A.xml  GSMlcd.xml  HWP0A72.xml  HWP2647.xml  MED89DD.xml  MEL44B0.xml  MEL4511.xml  MEL4513.xml  MEL4632.xml  MEL463D.xml  MELcrt.xml  NEC6605.xml  NEC662B.xml  (+96 more)
ddccontrol-db/doc/: Sony_SDM-S205K
ddccontrol-db/po/: .cvsignore  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ddccontrol-db.pot  es.po  fr.gmo  fr.po  pl.po  ru.gmo  ru.po  zh.po  zh_CN.po
ddccontrol-db/scripts/: samsung
ddccontrol-web/: Makefile  autolayout.xml  commit.sh  custom-tabular.xsl  depends.tabular  doc.xml  download.xml  layout.xml  website.database.xml  website.xml
ddccontrol-web/htdocs/: ddccontrol.css  download.html  index.html
ddccontrol/doc/: .cvsignore  Makefile.am  Makefile.in  about.xml  gpl.xml  install.xml  main.xml  report.xml  style-fo.xsl  style.xsl  supportedgc.xml  supportedmonitors.xml  techdocs.xml  thanks.xml  usage.xml  xml-design.txt
ddccontrol/man/: ddccontrol.1
ddccontrol/po/: .cvsignore  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ddccontrol.pot  de.po  es.po  fr.gmo  fr.po  pl.po  ru.gmo  ru.po  zh.po  zh_CN.po
ddccontrol/src/: .cvsignore  Makefile.am  Makefile.in  config.h.in
ddccontrol/src/ddccontrol/: .cvsignore  Makefile.am  Makefile.in  main.c
ddccontrol/src/ddcpci/: .cvsignore  Makefile.am  Makefile.in  ddcpci.h  i2c-algo-bit.c  i2c-algo-bit.h  intel740.c  intel810.c  intel855.c  main.c  nvidia.c  radeon.c  sis.c  via.c
ddccontrol/src/gddccontrol/: .cvsignore  Makefile.am  Makefile.in  fspatterns.c  gddccontrol.desktop.in  gprofile.c  main.c  notebook.c  notebook.h
ddccontrol/src/gnome-ddcc-applet/: .cvsignore  GNOME_ddcc-applet.server.in.in  GNOME_ddcc-applet.xml  Makefile.am  Makefile.in  ddcc-applet.c  ddcc-applet.h
ddccontrol/src/lib/: .cvsignore  Makefile.am  Makefile.in  conf.c  conf.h  ddcci.c  ddcci.h  ddcpci-ipc.h  i2c-dev.h  monitor_db.c  monitor_db.h  profile.c  profile.h
debian/: changelog  control  copyright  ddccontrol.dirs  ddccontrol.doc-base  ddccontrol.install  ddccontrol.menu  dirs  gddccontrol.menu  libddccontrol0.postrm  libddccontrol0.shlibs  lintian-overrides  rules  watch
debian/ddccontrol/: README.Debian  copyright  ddccontrol.doc-base  ddccontrol.docs  ddccontrol.menu  gddccontrol.dirs  gddccontrol.install  libddccontrol0.postinst  lintian-overrides
debian/ddccontrol-db/: copyright  ddccontrol
doc/: Makefile.am  about.xml  install.xml  main.xml  main.xml.in  report.xml  style-fo.xsl  style.xsl  supportedgc.xml  supportedmonitors.xml  techdocs.xml  usage.xml
docs/: ddccontrol.css  download.html  index.html
docs/doc/: 0.1.2.html  (+7 more)
man/: Makefile.am  ddccontrol.1  gddccontrol.1
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  cs.po  ddccontrol.pot  de.po  es.po  fr.po  ka.po  missing  pl.po  ru.po  zh_CN.po
scripts/: build_gnome_supp.sh  check_git_clean_after_build.sh  common_launcher.sh  common_test.sh  format_code.sh  valgrind_dbus_service_check.sh  valgrind_dbus_service_test.sh  valgrind_dbus_service_test_launcher.sh  valgrind_ddccontrol_test.sh  valgrind_ddccontrol_test_launcher.sh
src/: Makefile.am  config.h.in
src/daemon/: Makefile.am  README.md  busconfig.conf  client.c  dbus_client.c  dbus_client.h  ddccontrol.DDCControl.xml  service.c
src/daemon/data/: Makefile.am  ddccontrol.DDCControl.conf  ddccontrol.DDCControl.service.in  ddccontrol.service.in
src/ddccontrol/: Makefile.am  dbus_client.c  ddccontrol.h  main.c  printing.c
src/ddcpci/: Makefile.am  i2c-algo-bit.c  i2c-algo-bit.h  intel740.c  intel810.c  main.c  radeon.c  sis.c  via.c
src/gddccontrol/: Makefile.am  fspatterns.c  gddccontrol.desktop.in  gprofile.c  gui.h  main.c  notebook.c  notebook.h  stack.c
src/gnome-ddcc-applet/: GNOME_ddcc-applet.server.in.in  Makefile.am  ddcc-applet.c
src/lib/: Makefile.am  amd_adl.c  amd_adl.h  conf.c  conf.h  ddcci.c  ddcci.h  ddccontrol-i2c-dev.conf  ddccontrol.pc.in  ddcpci-ipc.h  i2c-dev.h  internal.h  issueurl.c  issueurl.h  monitor_db.c  monitor_db.h  monitor_db_internal.h  urlencode.c  urlencode.h
src/lib/tests/: test_abi_layout.c  test_caps_parse.c  test_edid.c  test_issueurl.c  test_parse_caps.c
(+142 files in other folders)
