[package]
name = "ddccontrol-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust monitor database XML parser and C ABI bridge for ddccontrol"

[lib]
crate-type = ["staticlib"]

[features]
gettext = []

[dependencies]
ddccontrol-caps = { path = "../ddccontrol-caps" }
encoding_rs = "0.8"
roxmltree = "0.20"
